# rusty-flame

./: Cargo.toml  README.md  index.html  pages.sh
pkg/: rusty_flame.js
shaders/: basic.vert  post_process.frag  postprocess.wgsl  solid.frag  sprite.vert  sprite_textured.vert  textured.frag  wgpu.wgsl
shaders/triangle/: tri.frag  tri.vert
src/: accumulate.rs  bounce.comp  fixed_point.rs  flame.rs  geometry.rs  main.rs  mesh.rs  piston_render.rs  plan.rs  post_process.rs  postprocess.rs  render.vert  render_common.rs  rendy_demo.rs  rendy_render.rs  ui.rs  util_types.rs  wgpu_render.rs
src/rendy_render/: mesh_pipeline.rs  mod.rs  post_process.rs
