[package]
name = "rusty-flame"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2018"
resolver = "2"

[dependencies]
nalgebra = "0.29.0"
log = { version = "0.4.14", features = ["max_level_warn", "release_max_level_info"] }
wgpu = "0.11.0"
winit = { version = "0.25.0", features = ["web-sys"] }
pollster = "0.2.4"
bytemuck = { version = "1.7.2", features = ["derive"] }
image = { version = "0.23.14", default-features = false, features = ["png"] }
salsa = "0.16.1"
num = { version = "0.4.0", default-features = false, features = [] }

egui = "0.14.2"
epi = "0.14.0"
egui_wgpu_backend = "0.13.0"
egui_winit_platform = "0.10.0"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# wgpu-subscriber = "0.1.0"

[profile.dev]
opt-level = 1
