[package]
name = "rusty-flame"
version = "0.1.0"
authors = ["Craig Macomber <CraigM@CraigM.info>"]
edition = "2018"
resolver = "2"

[dependencies]
nalgebra = "^0.31.0"
log = { version = "^0.4.17", features = ["max_level_warn", "release_max_level_info"] }
wgpu = "^0.12.0"
winit = "^0.26.1"
pollster = "0.2.5"
bytemuck = { version = "^1.9.1", features = ["derive"] }
image = { version = "^0.24.2", default-features = false, features = ["png"] }
salsa = "^0.16.1"
num = { version = "^0.4.0", default-features = false, features = [] }

egui = "^0.17.0"
epi = "^0.17.0"
egui_wgpu_backend = "^0.17.0"
egui-winit = "0.17"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# wgpu-subscriber = "0.1.0"

[profile.dev]
opt-level = 1
